# git-seek

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  presets.rs
cli/tests/: integration_tests.rs
trustfall_git_adapter/: Cargo.toml  README.md
trustfall_git_adapter/src/: edges.rs  lib.rs  properties.rs  schema.graphql  vertex.rs
trustfall_git_adapter/src/types/: branch.rs  commit.rs  mod.rs  repository.rs  tag.rs
trustfall_git_adapter/tests/: adapter_tests.rs
