[package]
name = "git-seek"
version = "0.1.1"
edition = "2024"
description = "Query Git repositories using Trustfall's GraphQL-like syntax"
license = "BSD-3-Clause"
repository = "https://github.com/starfy84/git-seek"
homepage = "https://github.com/starfy84/git-seek"
keywords = ["git", "query", "graphql", "trustfall"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-seek"
path = "src/main.rs"

[dependencies.git2]
version = "0.20"
default-features = false

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
comfy-table = "7.2.2"
serde_json = "1.0.149"
trustfall = "0.8"
trustfall_git_adapter = { version = "0.1.0", path = "../trustfall_git_adapter" }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.25"
