[package]
name = "trustfall_git_adapter"
version = "0.1.0"
edition = "2024"
description = "Trustfall adapter for querying Git repositories"
license = "BSD-3-Clause"
repository = "https://github.com/starfy84/git-seek"
homepage = "https://github.com/starfy84/git-seek"
keywords = ["git", "trustfall", "adapter", "query"]
categories = ["api-bindings", "development-tools"]

[dependencies.git2]
version = "0.20"
default-features = false

[dependencies]
trustfall = "0.8.1"
trustfall_core = "0.8.1"
trustfall_derive = "0.3.1"

[dev-dependencies]
tempfile = "3.8"
